Refactorization of the method startCleanupThread, add method getBucketsCount and ageBucketsForTesting